Update YouTubeHTML5.css to fix playlist misalignment
Update YouTubeHTML5.css to fix playlist misalignment in both shrink and embiggen mode

--- a/YouTubeHTML5.css
+++ b/YouTubeHTML5.css
@@ -1,5 +1,8 @@
 #player-api.crx-html5-player {
-    height: 360px;
+    height: 390px;
+}
+.watch-medium #watch7-playlist-tray-container {
+    height: 472px;
 }
 
 .watch-medium #player-api.crx-html5-player {
